--- a/src/common/css/navbar.css
+++ b/src/common/css/navbar.css
@@ -1,6 +1,5 @@
 .bo-diagonal {
     position: sticky;
-    padding: 0.5rem;
     height: 5rem;
     top: 0;
     left: 0;
@@ -19,4 +18,11 @@
     z-index: -1;
     
     backdrop-filter: blur(1rem);
+}
+
+.bo-logo {
+    position: relative;
+    top: -20px;
+    left: -35px;
+    height: 8rem;
 }
